[package]
description = ""
edition = "2021"
license = "MIT"
name = "asma"
repository = "https://github.com/fundamentei/rproxy"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
magic-crypt = "3.1.10"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = ["console"]
version = "0.3"
