[package]
description = ""
edition = "2021"
license = "MIT"
name = "asma"
repository = "https://github.com/fundamentei/rproxy"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.7.4"
base64 = "0.13.0"
block-modes = "0.8.1"
block-padding = "0.3.2"
generic-array = "0.14.6"
md5 = "0.7.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3.27"

[dependencies.web-sys]
features = ["console"]
version = "0.3"
